Added FliightVR project to showcase

--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
         <ul class="projectlist" id="pl1">
           <script>loadProject("territoryborders","pl1");</script>
           <script>loadProject("rangeindicator","pl1");</script>
+          <script>loadProject("fliight","pl1");</script>
         </ul>
       <h2 class="projectcategory">University</h2>
       <ul class="projectlist" id="pl2">
