--- a/projects/rangeindicator/page.html
+++ b/projects/rangeindicator/page.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../../css/projectstyle.css">
     <link rel="stylesheet" href="../../css/scrollbar.css">
+    <link rel="stylesheet" href="../../css/copyright.css">
     <script src="../../js/jquery.js"></script>
     <script src="../../js/main.js"></script>
   </head>
@@ -47,6 +48,16 @@
         </div>
 
       </div>
+
+      <footer>
+        <div class="copyrightsymbol">©</div>
+        <div class="copyrighttext"> 2023 <script>
+        let currentYear = new Date().getFullYear();
+      if(currentYear != 2023) document.write( "- " + currentYear); 
+      </script> Péter Csaba Panyik | All Rights Reserved
+      </div>
+      </footer>
+
     </div>
     <script type="module" src="/src/projects/main.ts"></script>
   </body>
