Update my title to Graphics Programmer
previously Shader Programmer

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                 <h2 id="welcometxtlist">
                 - Freelancer<br>
                 - Unity Developer<br>
-                - Shader Programmer
+                - Graphics Programmer
                 </h2>
                 <br>
                 <button class="button" onclick="scrollToElement('boxprojects')">⏬ See My Projects ⏬</button>
