Fix window title

--- a/projects/fliight/page.html
+++ b/projects/fliight/page.html
@@ -2,7 +2,7 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Range Indicator</title>
+    <title>Fliight VR</title>
     <link rel="icon" href="../../img/favicon.ico"><!--icon made with Magneto font-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@500&display=swap" rel="stylesheet">
