Add CV download

--- a/index.html
+++ b/index.html
@@ -103,6 +103,11 @@
               <br>
             Bedsides IT, I also know a bit of electronics, since I studied it as a subject in High School, and sometimes I build circuits for Arduino, along with a bit of C++ coding.
             </div>
+
+            </div>
+
+            <div class="centeringdiv">
+              <a download href="cv/PeterPanyik_CV.pdf"> → Download my CV ← </a>
             </div>
           </div>
     </div>
